tests/compile-errors/src/different-serializable-type.stderr
error[E0277]: the trait bound `Different: Borrow<Expected>` is not satisfied
  --> src/different-serializable-type.rs:28:1
   |
28 | #[usdt::provider]
   | ^^^^^^^^^^^^^^^^^ the trait `Borrow<Expected>` is not implemented for `Different`
...
35 |     my_provider::my_probe!(|| Different { x: 0 });
   |     --------------------------------------------- in this macro invocation
   |
note: required by a bound in `__usdt_private_my_provider_my_probe_type_check`
  --> src/different-serializable-type.rs:28:1
   |
28 | #[usdt::provider]
   | ^^^^^^^^^^^^^^^^^ required by this bound in `__usdt_private_my_provider_my_probe_type_check`
...
35 |     my_provider::my_probe!(|| Different { x: 0 });
   |     --------------------------------------------- in this macro invocation
   = note: this error originates in the macro `my_provider::my_probe` (in Nightly builds, run with -Z macro-backtrace for more info)
